fix(fact-layer): wire FactLayerByteIdentityIT via Failsafe + make --check provenance-tolerant (#108)
The byte-identity IT (Rule G-15 sub-clause .c.bytes) never executed: the
architecture-workspace module had only maven-surefire-plugin (whose default
include patterns match *Test, not *IT) and no maven-failsafe-plugin, so the
*IT class was bound to no lifecycle phase. Consequences: the fact-layer
byte-identity contract was unenforced, and the maven_tests_green baseline
counted 2 tests that never ran.

- Add maven-failsafe-plugin (integration-test + verify goals) so *IT runs in
  `mvn verify`. Surefire still runs the unit *Test classes in the test phase,
  so the gate's `mvn clean test` is unaffected.
- ExtractFactsCli --check: normalize the per-commit provenance SHA (the
  repo_commit field + the banner's "at commit <sha>") before comparing, so the
  check enforces fact CONTENT identity but tolerates the commit SHA that
  legitimately differs between the commit a fact file was generated in and a
  later HEAD (otherwise the check could never pass across commits). Genuine
  content drift (a hand-edited fact value) is still detected.

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>